# r2a

./: .gitignore  Cargo.toml  README.md  build.rs  r2a.code-workspace  rust-analyzer-cargo-check.sh  rust-analyzer-vscode-run-cmd.sh
.github/workflows/: build.yml
containers/: Dockerfile_doc_only  Dockerfile_humble  Dockerfile_jazzy  entrypoint.sh
examples/: pubsub_and_parquet.rs  pubsub_and_parquet_pointcloud2.rs
src/: lib.rs  ros_mapper.rs  schema.rs
