[package]
name = "r2a"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/istvan-fodor/r2r"
repository = "https://github.com/istvan-fodor/r2r"
license-file = "LICENSE"
license = "Apache License 2.0"
readme = "README.md"

[dependencies]
arrow-schema = ">=50"
arrow-array = ">=50"
r2r = ">=0.9.0"
anyhow = ">=1"
log = "0"


[dev-dependencies]
futures = "0.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "full"] }
parquet = "53"
rand = "0.8"

[build-dependencies]
walkdir = "2"
r2r = ">=0.9.0"
r2r_common = ">=0.9.0"
anyhow = "1"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2", features = ["full", "visit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
